--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,10 +71,6 @@ jobs:
         run: ./gradlew ktlintCheck --no-daemon --stacktrace --info
         continue-on-error: true
 
-      # - name: Run detekt with debug
-      #   run: ./gradlew detekt --no-daemon --stacktrace --info
-      #   continue-on-error: true
-
       - name: Upload build logs on failure
         if: failure()
         uses: actions/upload-artifact@v4
@@ -316,4 +312,17 @@ jobs:
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
         with:
-          args: ${{ steps.discord_failure_message.outputs.message }} 
+          args: ${{ steps.discord_failure_message.outputs.message }}
+
+  detekt:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 17
+      - name: Run Detekt
+        run: ./gradlew detekt --no-daemon --stacktrace 
