--- a/gradle.local.properties
+++ b/gradle.local.properties
@@ -17,10 +17,19 @@ kotlin.incremental=false
 iosResourcesDir=src/iosMain/resources
 org.gradle.configureondemand=true
 kotlin.native.ignoreDisabledTargets=true
-mavenCentralUsername=mZGfxg6C
-mavenCentralPassword=OvXuIg2f4eRm1Zo5vI5gbdBck+1Mkgkn2bZaYf72qVno
+mavenCentralUsername=6aSxHx
+mavenCentralPassword=9KL0swvRbrdVBTPHYxZZvptTfabw8QLBS
 signing.keyId=FD5F30FC
 signing.password=Smoy1994*
 signing.secretKeyRingFile=/Volumes/MacBook_Externo/MacBook_Externo/Downloads/my_secring.gpg
 # Kotlin compiler memory settings
 kotlin.daemon.jvm.options=-Xmx4048m
+mavenCentralPublishing=true
+signAllPublications=true
+##mavenCentralPublishing=true
+#signAllPublications=true
+#mavenCentralUsername=6aSxHx
+#mavenCentralPassword=9KL0swvRbrdVBTPHYxZZvptTfabw8QLBS
+#signing.keyId=35FEBBC7
+#signing.password=Smoy1994*
+#signing.secretKeyRingFile=/Volumes/MacBook_Externo/MacBook_Externo/Downloads/my_secring.gpg
