feat: add configurable selection limit for gallery picker
This commit introduces a `selectionLimit` parameter to `GalleryConfig` to control the maximum number of images that can be selected from the gallery.

- The `selectionLimit` defaults to 30 and has a maximum value of 30.
- This limit is enforced at compile time to prevent performance issues and crashes, particularly on iOS, when selecting a large number of images.
- The `GalleryPickerLauncher` now accepts `selectionLimit`.
- iOS implementation (`PHPickerPresenter`) now uses the provided `selectionLimit` and includes a `require` check.
- Documentation (README, CHANGELOG, FAQ, EXAMPLES, API_REFERENCE) has been updated to reflect this new feature, including examples and explanations.
- Version bumped to 1.0.1.
- GitHub Actions workflows for version bump and deployment are now set to manual trigger (`workflow_dispatch`).

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,14 @@
 name: Deploy to Maven Central
 
 on:
-  push:
-    branches: [ main ]
-  workflow_run:
-    workflows: ["Version Bump"]
-    types:
-      - completed
+  workflow_dispatch:
+    # Permite ejecución manual desde la UI de GitHub Actions
+  # push:
+  #   branches: [ main ]
+  # workflow_run:
+  #   workflows: ["Version Bump"]
+  #   types:
+  #     - completed
 
 jobs:
   deploy:
