feat: implement onDismiss callback for pickers
This commit introduces an `onDismiss` callback to both `ImagePickerLauncher` and `GalleryPickerLauncher`. This callback is invoked when the user dismisses or cancels the picker without making a selection.

This is crucial for resetting UI state, such as a `showPicker` boolean, to allow the picker to be reopened.

Key changes:
- Added `onDismiss` parameter to `ImagePickerConfig` and `GalleryPickerLauncher`.
- Implemented `onDismiss` invocation in Android and iOS native picker delegates.
- Updated documentation and examples to demonstrate usage of `onDismiss`.
- Removed unnecessary `context` parameter from `ImagePickerLauncher` and `GalleryPickerLauncher` as it's now handled internally (Android) or not needed (iOS).
- Removed unused external storage permissions from AndroidManifest.xml as they are no longer required for gallery access on modern Android versions.
- Updated version to 1.0.2.

--- a/detekt.yml
+++ b/detekt.yml
@@ -19,7 +19,7 @@ style:
     active: true
     maxLineLength: 120
   TrailingWhitespace:
-    active: true
+    active: false
   UnusedImports:
     active: true
   ExpressionBodySyntax:
