fix: configure Codecov badge to use develop branch and improve CI reporting
- Update README badge to point to develop branch instead of main
- Configure codecov.yml to explicitly use develop branch for badge
- Add verbose logging and debug info to Codecov upload step
- Add branch override parameters to ensure proper branch tracking
- This should fix the badge showing outdated coverage from main branch

--- a/codecov.yml
+++ b/codecov.yml
@@ -9,10 +9,33 @@ coverage:
         target: 90%
         threshold: 1%
         base: auto
+        branches:
+          - develop
+          - main
     patch:
       default:
         target: 85%
         threshold: 5%
+        branches:
+          - develop
+          - main
+
+# Configure which branch to use for the badge
+codecov:
+  branch: develop
+  
+# Configure GitHub checks and annotations
+github_checks:
+  annotations: true
+
+# Force Codecov to process reports even with small changes  
+parsers:
+  gcov:
+    branch_detection:
+      conditional: yes
+      loop: yes
+      method: no
+      macro: no
 
 ignore:
   - "**/*Test*"
@@ -39,6 +62,3 @@ comment:
   layout: "reach, diff, flags, files"
   behavior: default
   require_changes: false
-
-github_checks:
-  annotations: true
